# gorilla

berkeley-function-call-leaderboard/: pyproject.toml
berkeley-function-call-leaderboard/bfcl/: _llm_response_generation.py  constant.py  utils.py
berkeley-function-call-leaderboard/bfcl/eval_checker/: constant.py  eval_runner.py  eval_runner_helper.py
berkeley-function-call-leaderboard/bfcl/model_handler/: base_handler.py  handler_map.py
berkeley-function-call-leaderboard/data/: BFCL_v3_memory.json  BFCL_v3_memory_base.json  BFCL_v3_memory_conflict.json  BFCL_v3_sql.json  BFCL_v3_web_search.json  BFCL_v3_web_search_conflict.json
berkeley-function-call-leaderboard/data/memory_prereq_conversation/: memory_base.json  memory_conflict.json
berkeley-function-call-leaderboard/data/multi_turn_func_doc/: memory.json  web_search.json
berkeley-function-call-leaderboard/data/possible_answer/: BFCL_v3_live_multiple.json  BFCL_v3_memory.json  BFCL_v3_memory_base.json  BFCL_v3_memory_conflict.json  BFCL_v3_multi_turn_base.json  BFCL_v3_multi_turn_composite.json  BFCL_v3_multi_turn_long_context.json  BFCL_v3_multi_turn_miss_func.json  BFCL_v3_multi_turn_miss_param.json  BFCL_v3_sql.json  BFCL_v3_web_search.json  BFCL_v3_web_search_conflict.json
berkeley-function-call-leaderboard/partiql-parser/: Cargo.toml
berkeley-function-call-leaderboard/partiql-parser/src/: lib.rs  main.rs
berkeley-function-call-leaderboard/utils/: compile_func_doc.py  compile_multi_turn_func_doc.py  visualize_multi_turn_ground_truth_conversation.py
(+11 files in other folders)
